# actllm

./: .gitignore  README.md  prompt_examples.md  pyproject.toml
configs/: default.yaml  gemma.yaml  gemma12b.yaml  gemma_finetuned.yaml  qwen.yaml  qwen_finetuned.yaml
configs/ablations/: cot_few_shot.yaml  cot_zero_shot.yaml  few_shot_nearest.yaml  few_shot_random.yaml  few_shot_stratified.yaml  high_temp.yaml  low_temp.yaml  zero_shot.yaml
data/few_shot/: pool.jsonl
scripts/: curate_few_shot.py  finetune.py  generate.py  prepare_finetune_data.py  run_ablations.py
src/actllm/: pipeline.py
src/actllm/api/: client.py  retry.py
src/actllm/parse/: parser.py  validator.py
src/actllm/prompt/: builder.py  few_shot.py  templates.py
src/actllm/schedule/: schema.py
tests/: test_builder.py  test_export.py  test_finetune.py  test_parser.py  test_validator.py
