[project]
name = "actllm"
version = "0.1.0"
description = "LLM-based 24-hour activity schedule generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jsonlines>=4.0.0",
    "typer>=0.12.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.0.0",
    "torch>=2.4.0",
]

[project.optional-dependencies]
local = [
    "transformers>=4.50.0",
    "accelerate>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/actllm"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
